# kite_tracking

./: CMakeLists.txt  package.xml
launch/: kite_tracking.launch
src/: KCFtracker.cpp  LQR.cpp  PTUserialcom.cpp  angleOfViewFar.txt  angleOfViewLabScale.txt  arduinoserialcom.cpp  camera.cpp  display.cpp  markerdetection.cpp  singlemarkerdetection.cpp
